@@ -19,6 +19,8 @@
   18. Similar to #15, the entire world map, w/ cmare files, is in VFS at /resources/map/... along with editable properties files.
   19. (Tech) numerous gun and shield types created -- most of them templates for a murder-motel-type game
   20. PRIVATE setting in coffeemud.ini expanded to allow moving players and area objects between hosts.
+  21. You can now YELL in a direction, which expands by 1 the number of rooms you are heard in, and which way.
+  22. IMPORT now accepts zip files containing *.cmare files.
 //TODO: make personal sensor systems
 //TODO: make the tech install skill!!!
 //TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
